# specklab

./: .gitignore  README.md  pyproject.toml
specklab/: __init__.py  __main__.py  app.py  mathutil.py  protocol.py
specklab/render/: __init__.py  render.py
specklab/sim/: __init__.py  particle.py  sim.py
